compiler/tests/en/errors/ret_mismatch.salam
// EXPECT: E002
func f() : int: ret "no" end

func main: end
